# OSM-binary

./: .pkg  CMakeLists.txt
osmpbf/: CMakeLists.txt
tools/: CMakeLists.txt
